--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										Você vai encontrar também, minhas experiências profissionais, habilidades, ferramentas e conceitos envolvendo a Ciência de Dados. <br />Sinta-se à vontade para entrar em contato através dos links no final da página.</p>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/perfil.jpg" alt="" style="display: block; margin: 0 auto; width: 350px; height: 350px;" />
 									</span>
 								</section>
 
@@ -53,7 +53,7 @@
 										<!-- Content -->
 											<h2 id="content">Meu nome é Ricardo Júnior</h2>
 											<p> Sou formado em Engenharia de Produção e trabalho no ITPAC - Instituto Tocantinense Presidente Antônio Carlos, Araguaína Tocantins.</p>
-											<p>Atualmente, trabalho na gestão do Polo de cursos superiores e pós-graduação na modalidade à Distância e auxílio na parte comercial de captação de alunos para a instituição, venho trabalhando com projetos pessoais sobre Ciência de Dados, para adquirir experiência na solução de problemas de negócio e domínio sobre as ferramentas de análise de dados.</p>
+											<p>Atualmente, estou desempregado a procura de oportundiade de trabalho.</p>
 											<p>Estou buscando uma oportunidade de trabalhar profissionalmente como Cientista de Dados para melhorar a tomada de decisão da empresa, através da construção de soluções usando dados.</p>
 											</section>
 
@@ -106,6 +106,8 @@
 										<header class="main">
 											<h1>Experiências profissionais</h1>
 										</header>
+											<h2 id="content">1+ anos trabalhando com Gestão Acadêmica .</h2>
+											<p>Auxiliando o Pró-reitor de Graduação em todo processo de gestão no âmbito acadêmico da instituição.</p>
 											<h2 id="content">4+ anos trabalhando com Ensino a Distância.</h2>
 											<p>Auxiliando e sendo responsável por todo o processo no que diz respeito o Ensino a Distância no ensino superior, desde a criação de material, documentação referente ao MEC, treinamento dos professores, acompanhamento dos alunos e suporte da plataforma AVA(ambiente virtual de aprendizagem).</p>
 											<h2 id="content">4+ anos como voluntário em uma escola de ensino básico.</h2>
@@ -119,16 +121,21 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/projeto2.jpg" alt="" /></a>
-											<h3>Projeto 1</h3>
-											<p>Projeto em construção.</p>
+											<a href="#" class="image"><img src="images/logo.jpg" alt="" style="display: block; margin: 0 auto; width: 400px; height: 400px;"/></a>
+											<h3>Desenvolvimento de um Painel Gerencial para Negócio com o Stremlit</h3>
+											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógico de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa de marketplace de delivery de comida na Índia.</p>
+											<p>O Resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado a internet.</p>
 											<h4>As ferramentas utilizadas foram:</h4>
 											<ul>
-												<li>Em estudo.</li>
-												<li>Em estudo.</li>
+												<li>Python</li>
+												<li>Jupyter Lab</li>
+												<li>Terminal</li>
+												<li>Streamlit</li>
+												<li>Streamlit Cloud</li>
+												<li>Github</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="#" class="button">Saiba Mais</a></li>
+												<li><a href="https://github.com/Ricardo661/Fome_Zero_Project" class="button">Saiba Mais</a></li>
 											</ul>
 										</article>
 										<article>
@@ -185,3 +192,4 @@
 			</html>
 	</body>
 </html>
+
