--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/logo.jpg" alt="" style="display: block; margin: 0 auto; width: 400px; height: 400px;"/></a>
+											<a href="https://github.com/Ricardo661/Fome_Zero_Project" class="image"><img src="images/logo.jpg" alt="" style="display: block; margin: 0 auto; width: 400px; height: 400px;"/></a>
 											<h3>Desenvolvimento de um Painel Gerencial para Negócio com o Stremlit</h3>
 											<p>Nesse projeto, os conceitos de Programação em Python, manipulação de dados, pensamento estratégico e lógico de negócio, junto com ferramentas de desenvolvimento web como o Streamlit e Github, foram usados para desenvolver um painel gerencial com as principais métricas de uma empresa de marketplace de delivery de comida na Índia.</p>
 											<p>O Resultado final do projeto foi um painel hospedado em um ambiente Cloud e disponibilizado através de um link web. O painel pode ser acessado por qualquer dispositivo conectado a internet.</p>
