--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
 										<article>
 											<span class="icon fa fa-file-code-o"></span>
 											<div class="content">
-												<h3>Linguagens de Programação e Banco de Dados</h3>
+												<h3>Linguagens de Programação </h3>
 												<ul>
-													<li>Em desenvolvimento</li>
+													<li>Python com foco em análise de dados</li>
+													<li>Pensamento Estratégico</li>
+													<li>Conceitos de ETL</li>
 												</ul>
 											</div>
 										</article>
@@ -86,7 +88,8 @@
 											<div class="content">
 												<h3>Visualização de Dados</h3>
 												<ul>
-													<li>Em desenvolvimento</li>
+													<li>Matplotlib e Seaborn</li>
+													<li>Streamlit</li>
 												</ul>
 											</div>
 										</article>
@@ -95,7 +98,8 @@
 											<div class="content">
 												<h3>Engenharia de Software</h3>
 												<ul>
-													<li>Em desenvolvimento</li>
+													<li>Github</li>
+													<li>Streamlit Cloud</li>
 												</ul>
 											</div>
 										</article>
